--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DICT Student Portal</title>
+  <title>Godoma TTI - DICT Student Portal</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -46,7 +46,7 @@
 </head>
 <body>
   <div class="login-box" id="loginBox">
-    <h2>🔐 Student Login</h2>
+    <h2>🔐 Godoma TTI - DICT Login</h2>
     <input type="text" id="username" placeholder="Student ID or Name" /><br />
     <input type="password" id="password" placeholder="Password" /><br />
     <button onclick="login()">Login</button>
@@ -54,7 +54,7 @@
   </div>
 
   <header>
-    <h1>DICT Student Portal</h1>
+    <h1>Godoma TTI - DICT Student Portal</h1>
     <p>Diploma in ICT | Resources, Announcements, and Academic Tools</p>
   </header>
 
@@ -136,7 +136,7 @@
   </main>
 
   <footer>
-    &copy; 2025 DICT Student Portal | Built by Class Rep
+    &copy; 2025 Godoma TTI - DICT Student Portal | Built by Class Rep
   </footer>
 
   <script>
